syntax = "proto3";

package cmd;

service FuranExecutor {
  rpc StartBuild (BuildRequest) returns (BuildRequestResponse) {}
  rpc GetBuildStatus (BuildStatusRequest) returns (BuildStatusResponse) {}
  rpc CancelBuild (BuildCancelRequest) returns (BuildStatusResponse) {}
}

message RPCError {
  bool is_error = 1;
  string error_msg = 2;
}

message BuildDefinition {
  string github_repo = 1;
  string ref = 2; // sha/branch/tag
  repeated string tags = 3;
  bool tag_with_commit_sha = 4;
}

message PushRegistryDefinition {
  string repo = 1;
}

message PushS3Definition {
  string region = 1;
  string bucket = 2;
  string key_prefix = 3;
}

message PushDefinition {
  PushRegistryDefinition registry = 1;
  PushS3Definition s3 = 2;
}

// Requests

message BuildRequest {
  BuildDefinition build = 1;
  PushDefinition push = 2;
}

message BuildStatusRequest {
  string build_id = 1;
}

message BuildCancelRequest {
  string build_id = 1;
}

// Responses

message BuildRequestResponse {
  RPCError error = 1;
  string build_id = 2;
}

message BuildStatusResponse {
  RPCError error = 1;
  enum BuildState {
    BUILDING = 0;
    PUSHING = 1;
    SUCCESS = 2;
    BUILD_FAILURE = 3;
    PUSH_FAILURE = 4;
  }
  string build_id = 2;
  BuildRequest build_request = 3;
  BuildState state = 4;
  bytes build_output = 5;
  bytes push_output = 6;
  bool finished = 7;
  bool failed = 8;
  bool cancelled = 9;
  string started = 10;
  string completed = 11;
  int32 duration = 12;
}
